Add JavaDoc to FraudDetectionService; use Math.clamp()
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>